# RayTracer

./: CMakeLists.txt
src/core/: point.h  raytracer.h  render.h  vector.h
src/main/: render.cpp
